# A3-Make-Your-Own-Machine-Translation-Language

./: .gitignore  README.md  pyproject.toml  st126235_assignment_3.ipynb
app/: app.py
app/templates/: index.html
model/: config.json  vocab.json
